@@ -1,3 +1,9 @@
+2002-01-10  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>
+
+	* [w3m-dev 02810]
+	* scripts/Makefile: read -r
+	* scripts/w3mhelp.cgi.in: fix bugs displaying "C-" only in some case
+
 2002-01-08  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>
 
 	* [w3m-dev 02794]
@@ -1789,4 +1795,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.201 2002/01/07 16:28:17 ukai Exp $
+$Id: ChangeLog,v 1.202 2002/01/10 03:45:13 ukai Exp $
